--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,7 +1,1 @@
-add_llvm_tool(npcomp-dummy-runner
-  dummy-runner.cpp
-)
-
-target_link_libraries(npcomp-dummy-runner PRIVATE
-  LLVMSupport
-)
+add_subdirectory(Dialect)
