Initial TCF/TCP E2E seed.
Very much WIP.

This is enough to get tcf.add down to approximately the "linalg.generic
on buffers" level of abstraction. (but there are nuances)

--- a/tools/npcomp-opt/CMakeLists.txt
+++ b/tools/npcomp-opt/CMakeLists.txt
@@ -4,6 +4,9 @@ set(LIBS
         ${dialect_libs}
         ${conversion_libs}
         MLIROptLib
+        NPCOMPE2E
+        NPCOMPTCP
+        NPCOMPTCF
         NPCOMPNumpyDialect
         NPCOMPBasicpyDialect
         )
