Lower !shape.shape to SSA values.
This uses an approach inspired by what is done in IREE. See comments on
LowerRankedShapes.cpp for how it works.

The basic gist is that we have an op that creates a !shape.shape from a
set of SSA values representing the extents, and then iteratively replace
any op producing a !shape.shape with instances of that op.

--- a/lib/E2E/CMakeLists.txt
+++ b/lib/E2E/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_mlir_library(NPCOMPE2E
   E2E.cpp
+  LowerRankedShapes.cpp
   LowerToHybridTensorMemRef.cpp
 
   ADDITIONAL_HEADER_DIRS
@@ -15,4 +16,5 @@ add_mlir_library(NPCOMPE2E
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRLinalgOps
+  MLIRStandardOps
   )
