Lower to LLVM dialect.
With this commit, we finish conversion to LLVM dialect, and should be
ready for subsequent commits to convert to an LLVM module and let LLVM
codegen to native machine code.

This required a custom "lower to LLVM" pass to support lowering
tcp.abort_if to a runtime call. In the future, this pass will grow to do
type conversions for our own runtime types as we add those.

--- a/lib/E2E/CMakeLists.txt
+++ b/lib/E2E/CMakeLists.txt
@@ -2,6 +2,7 @@ add_mlir_library(NPCOMPE2E
   E2E.cpp
   LowerRankedShapes.cpp
   LowerToHybridTensorMemRef.cpp
+  LowerToLLVM.cpp
   LowerToMemRefABI.cpp
 
   ADDITIONAL_HEADER_DIRS
@@ -18,4 +19,6 @@ add_mlir_library(NPCOMPE2E
   MLIRIR
   MLIRLinalgOps
   MLIRStandardOps
+  MLIRStandardToLLVM
+  MLIRLoopToStandard
   )
