--- a/python_native/CMakeLists.txt
+++ b/python_native/CMakeLists.txt
@@ -78,7 +78,7 @@ target_link_libraries(${extension_target}
     MLIREDSC
     MLIREDSCInterface
     MLIRIR
-    MLIRLoopToStandard
+    MLIRSCFToStandard
     MLIRLLVMIR
     MLIRPass
     MLIRTargetLLVMIR
