Add bare-bones npcomp-run-mlir.
The code isn't super clean, but is a useful incremental step
establishing most of the boilerplate for future enhancements.
We can't print or return tensors yet so correctness TBD, but I've
stepped into the running code in the debugger so I know it definitely is
running.

This is the first step to building out an npcomp mini-runtime. The
mini-runtime doesn't have to be fancy or complex, but it should at least
be layered nicely (which this code and the current compiler interaction
with the "runtime" code is not). Now that we have boilerplate for e2e
execution in some form, we can build that out.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,8 +8,11 @@ configure_lit_site_cfg(
 set(NPCOMP_OPT_TEST_DEPENDS
         FileCheck count not
         npcomp-opt
+        npcomp-run-mlir
 )
 
+# TODO: Rename this to just check-npcomp, now that npcomp-run-mlir exists
+# too.
 add_lit_testsuite(check-npcomp-opt "Running the npcomp-opt regression tests"
         ${CMAKE_CURRENT_BINARY_DIR}
         DEPENDS ${NPCOMP_OPT_TEST_DEPENDS}
