--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,5 +49,6 @@ add_subdirectory(include/npcomp)
 add_subdirectory(lib)
 add_subdirectory(python)
 add_subdirectory(python_native)
+add_subdirectory(runtime)
 add_subdirectory(tools)
 add_subdirectory(test)
