--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_subdirectory(include/npcomp)
 add_subdirectory(lib)
 add_subdirectory(python)
 add_subdirectory(python_native)
+add_subdirectory(pytest)
 add_subdirectory(runtime)
 add_subdirectory(tools)
 add_subdirectory(test)
