--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,10 +11,12 @@ set(NPCOMP_TEST_DEPENDS
         npcomp-run-mlir
 )
 
-add_lit_testsuite(check-npcomp "Running the npcomp regression tests"
+add_lit_testsuite(check-npcomp-lit "Running the npcomp regression tests"
         ${CMAKE_CURRENT_BINARY_DIR}
         DEPENDS ${NPCOMP_TEST_DEPENDS}
         )
-set_target_properties(check-npcomp PROPERTIES FOLDER "Tests")
+set_target_properties(check-npcomp-lit PROPERTIES FOLDER "Tests")
 
 add_lit_testsuites(NPCOMP_OPT ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS ${NPCOMP_TEST_DEPENDS})
+
+add_dependencies(check-npcomp check-npcomp-lit)
