Refactor things so that an SCF mixin dialect helper can be used.
* Makes the OpBuilder an input to the DialectHelper.
* The containment hierarchy can be simplified further.
* There are still only a few places this is instantiated, so opting for working over great.

--- a/python_native/CMakeLists.txt
+++ b/python_native/CMakeLists.txt
@@ -33,6 +33,7 @@ set(extension_pybind_sources
   NpcompDialect.cpp
   NpcompModule.cpp
   PybindUtils.cpp
+  CoreDialects.cpp
 )
 set_source_files_properties(
   ${extension_pybind_sources}
