Move Basicpy and Numpy dialect IR to IR/ folder.

--- a/lib/Dialect/Basicpy/CMakeLists.txt
+++ b/lib/Dialect/Basicpy/CMakeLists.txt
@@ -1,12 +1,1 @@
-add_mlir_dialect_library(NPCOMPBasicpyDialect
-  BasicpyDialect.cpp
-  BasicpyOps.cpp
-
-  ADDITIONAL_HEADER_DIRS
-  ${PROJECT_SOURCE_DIR}/include/npcomp/Dialect/Basicpy
-
-  DEPENDS
-  MLIRBasicpyOpsIncGen
-)
-
-target_link_libraries(NPCOMPBasicpyDialect PUBLIC MLIRIR)
+add_subdirectory(IR)
