--- a/lib/Dialect/Numpy/CMakeLists.txt
+++ b/lib/Dialect/Numpy/CMakeLists.txt
@@ -1,12 +1,1 @@
-add_mlir_dialect_library(NPCOMPNumpyDialect
-  NumpyDialect.cpp
-  NumpyOps.cpp
-
-  ADDITIONAL_HEADER_DIRS
-  ${PROJECT_SOURCE_DIR}/include/npcomp/Dialect/Numpy
-
-  DEPENDS
-  MLIRNumpyOpsIncGen
-)
-
-target_link_libraries(NPCOMPNumpyDialect PUBLIC MLIRIR)
+add_subdirectory(IR)
