--- a/include/npcomp/Dialect/Numpy/CMakeLists.txt
+++ b/include/npcomp/Dialect/Numpy/CMakeLists.txt
@@ -1,3 +1,1 @@
-add_mlir_dialect(NumpyOps numpy)
-add_mlir_doc(NumpyDialect -gen-dialect-doc NumpyDialect Numpy/)
-add_mlir_doc(NumpyOps -gen-op-doc NumpyOps Numpy/)
+add_subdirectory(IR)
