--- a/tools/npcomp-opt/CMakeLists.txt
+++ b/tools/npcomp-opt/CMakeLists.txt
@@ -4,14 +4,8 @@ set(LIBS
         ${dialect_libs}
         ${conversion_libs}
         MLIROptLib
-        # Note: the following must also match python_native/CMakeLists.txt
-        NPCOMPE2E
-        NPCOMPTCP
-        NPCOMPTCF
-        NPCOMPNpcompRt
-        NPCOMPNumpyDialect
-        NPCOMPBasicpyDialect
-        )
+        NPCOMPInitAll
+)
 add_llvm_executable(npcomp-opt npcomp-opt.cpp)
 
 llvm_update_compile_flags(npcomp-opt)
