--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,2 +1,7 @@
+add_subdirectory(BasicpyToStd)
 add_subdirectory(TCFToTCP)
 add_subdirectory(TCPToLinalg)
+
+if(NPCOMP_ENABLE_IREE)
+add_subdirectory(BasicpyToIREEVM)
+endif()
