Move most python sources to the include and lib tree.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(Conversion)
 add_subdirectory(Dialect)
 add_subdirectory(E2E)
+add_subdirectory(Python)
 
 ################################################################################
 # Setup the initialization target.
