Wire up IREE compilation and runtime in a new backend test.
* Adds python bindings for invoking flow, HAL, and VM lowering pipelines.
* Adds pythong bindings for translating to VM module flatbuffer.
* Adds a new backend_test/iree directory and configure lit to find the IREE python rt bindings.
* Open code a simple_invoke.py that exercises the whole pipeline (need real APIs for a lot of this).
* Fails when invoking the function because I never implemented argument marshaling for scalars :(
* Plenty of stuff to do tomorrow.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,8 +58,9 @@ if(NPCOMP_ENABLE_IREE)
   string(APPEND NPCOMP_TABLEGEN_ARGS "-DNPCOMP_ENABLE_IREE")
   if(NPCOMP_IREE_SRCDIR)
     message(STATUS "Depending on IREE source: ${NPCOMP_IREE_SRCDIR}")
-    set(IREE_BUILD_TESTS OFF CACHE BOOL "Override IREE setting")
-    set(IREE_BUILD_SAMPLES OFF CACHE BOOL "Override IREE setting")
+    set(IREE_BUILD_TESTS OFF CACHE BOOL "Override IREE setting" FORCE)
+    set(IREE_BUILD_SAMPLES OFF CACHE BOOL "Override IREE setting" FORCE)
+    set(IREE_BUILD_PYTHON_BINDINGS ON CACHE BOOL "Override IREE setting" FORCE)
     set(IREE_MLIR_DEP_MODE "DISABLED" CACHE STRING "Override IREE setting")
     add_subdirectory("${NPCOMP_IREE_SRCDIR}" "iree" EXCLUDE_FROM_ALL)
   else()
@@ -99,3 +100,7 @@ add_subdirectory(pytest)
 add_subdirectory(runtime)
 add_subdirectory(tools)
 add_subdirectory(test)
+
+if(NPCOMP_ENABLE_IREE)
+  add_subdirectory(backend_test/iree)
+endif()
