Add partial evaluator for explicit numpy ufuncs.
* This enables emission of "numpy.add(a, b)" and several dozen others.
* Will deprecate original ufunc infra in a follow-on.

--- a/lib/Dialect/Numpy/IR/CMakeLists.txt
+++ b/lib/Dialect/Numpy/IR/CMakeLists.txt
@@ -6,6 +6,7 @@ add_mlir_dialect_library(NPCOMPNumpyDialect
   ${PROJECT_SOURCE_DIR}/include/npcomp/Dialect/Numpy
 
   DEPENDS
+  NPCOMPBasicpyDialect
   MLIRNumpyOpsIncGen
 )
 
