--- a/lib/Dialect/Basicpy/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Basicpy/Transforms/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_mlir_conversion_library(NPCOMPBasicpyPasses
+  CPATypeInference.cpp
   TypeInference.cpp
 
   ADDITIONAL_HEADER_DIRS
@@ -13,4 +14,5 @@ add_mlir_conversion_library(NPCOMPBasicpyPasses
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRPass
+  NPCOMPTyping
 )
