Introduce a type interface for mapping to CPA types.
* Currently just simplifies the logic for UnknownType -> TypeVar.

--- a/lib/Typing/CPA/CMakeLists.txt
+++ b/lib/Typing/CPA/CMakeLists.txt
@@ -1,7 +1,12 @@
 add_library(NPCOMPTypingCPA
-  CPASupport.cpp
+  Interfaces.cpp
+  Support.cpp
 )
 
 target_link_libraries(NPCOMPTypingCPA
   MLIRIR
+)
+
+add_dependencies(NPCOMPTypingCPA
+  NPCOMPTypingCPAInterfacesIncGen
 )
