Extend the CPA type inference to work on numpy types/ops.
* Adds an op interface for adding CPA constraints.
* Adds a type conversion hook for handling built-in types (that we can't have adopt our interface).
* Converts tensor<> to object(!Tensor, [e:<type>]) just like NdArray.
* Implement a few numpy ops far enough to do dtype inference for simple sequences.

--- a/include/npcomp/Typing/CPA/CMakeLists.txt
+++ b/include/npcomp/Typing/CPA/CMakeLists.txt
@@ -1,4 +1,6 @@
 set(LLVM_TARGET_DEFINITIONS Interfaces.td)
-mlir_tablegen(Interfaces.h.inc -gen-type-interface-decls)
-mlir_tablegen(Interfaces.cpp.inc -gen-type-interface-defs)
+mlir_tablegen(TypeInterfaces.h.inc -gen-type-interface-decls)
+mlir_tablegen(TypeInterfaces.cpp.inc -gen-type-interface-defs)
+mlir_tablegen(OpInterfaces.h.inc -gen-op-interface-decls)
+mlir_tablegen(OpInterfaces.cpp.inc -gen-op-interface-defs)
 add_public_tablegen_target(NPCOMPTypingCPAInterfacesIncGen)
