NFC: Move CPATypeInference to Typing directory.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -38,6 +38,7 @@ add_mlir_library(NPCOMPInitAll
   NPCOMPBasicpyDialect
   NPCOMPBasicpyPasses
   NPCOMPNumpyDialect
+  NPCOMPTypingPasses
 
   ${ALL_DEPENDS}
 )
