Fix some compiler option and warning levels.

--- a/lib/Backend/IREE/CMakeLists.txt
+++ b/lib/Backend/IREE/CMakeLists.txt
@@ -2,14 +2,12 @@
 # NPCOMPBackendIREEPythonModule
 ################################################################################
 
+include(NpcompPython)
+include(NpcompIREEBackend)
+
 set(PYBIND_SOURCES
   PythonModule.cpp
 )
-set_source_files_properties(
-  ${PYBIND_SOURCES}
-  PROPERTIES COMPILE_FLAGS
-    "-frtti -fexceptions")
-
 add_library(NPCOMPBackendIREEPythonModule
   ${PYBIND_SOURCES}
 )
@@ -20,3 +18,6 @@ target_link_libraries(NPCOMPBackendIREEPythonModule
   iree_compiler_Dialect_HAL_Transforms_Transforms
   iree_compiler_Dialect_VM_Transforms_Transforms
 )
+
+npcomp_python_target_compile_options(NPCOMPBackendIREEPythonModule)
+npcomp_iree_target_compile_options(NPCOMPBackendIREEPythonModule)
