Make common utilities for converting TypeNode <-> IR types.
* Generalizes the conversions from ObjectValueType <-> tensor and ndarray.
* Creates a utility to construct the default type map hook.

--- a/lib/Typing/Transforms/CMakeLists.txt
+++ b/lib/Typing/Transforms/CMakeLists.txt
@@ -13,5 +13,6 @@ add_mlir_conversion_library(NPCOMPTypingPasses
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRPass
+  NPCOMPTypingCPASupport
   NPCOMPTypingCPA
 )
