NFC: Rename Support.(h|cpp) to Types.(h|cpp).

--- a/lib/Typing/Analysis/CPA/CMakeLists.txt
+++ b/lib/Typing/Analysis/CPA/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(NPCOMPTypingCPA
   Algorithm.cpp
   Interfaces.cpp
-  Support.cpp
+  Types.cpp
 )
 
 target_link_libraries(NPCOMPTypingCPA
